--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dibayar.in - Jasa Pembayaran Layanan Internasional | Bayar Claude, ChatGPT, Gemini</title>
+    <title>dibayar.in - Jasa Pembayaran ChatGPT, Claude, dan AI Tools Tanpa Kartu Kredit (Indonesia)</title>
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Jasa pembayaran layanan internasional terpercaya. Bayar Claude, ChatGPT, Gemini, Minimax, dan platform AI lainnya dengan mudah. Kurs kompetitif, proses cepat, pembayaran via QRIS.">
-    <meta name="keywords" content="jasa pembayaran internasional, bayar claude, bayar chatgpt, jasa top up chatgpt, bayar gemini, jasa bayar subscription, pembayaran usd ke rupiah, jasa pembayaran AI, top up claude pro, bayar openai, jasa bayar layanan luar negeri, pembayaran platform AI">
+    <meta name="description" content="Jasa pembayaran ChatGPT, Claude, Cursor, Gemini, dan AI tools lain tanpa kartu kredit di Indonesia. Semua pembayaran internasional dan subscription AI cukup pakai QRIS, transfer bank, atau e-wallet melalui dibayar.in.">
+    <meta name="keywords" content="jasa pembayaran ChatGPT, jasa bayar Claude AI, jasa bayar AI tanpa kartu kredit, jasa pembayaran platform AI Indonesia, jasa bayar subscription AI, jasa bayar AI tools, jasa pembayaran internasional, jasa bayar AI Indonesia, jasa bayar AI pakai QRIS, bayar subscription AI pakai transfer bank">
     <meta name="author" content="dibayar.in">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://dibayar.in/">
@@ -31,6 +31,32 @@
     <meta name="theme-color" content="#0070ba">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
+
+    <!-- JSON-LD Schema for Service -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Service",
+      "name": "Jasa Pembayaran ChatGPT, Claude, dan AI Tools Tanpa Kartu Kredit",
+      "provider": {
+        "@type": "Organization",
+        "name": "dibayar.in"
+      },
+      "areaServed": {
+        "@type": "Country",
+        "name": "Indonesia"
+      },
+      "serviceType": "Jasa pembayaran platform AI dan layanan internasional tanpa kartu kredit",
+      "description": "Layanan perantara pembayaran untuk ChatGPT Plus, Claude Pro, Cursor, GitHub Copilot, Gemini, dan AI tools lainnya tanpa kartu kredit. Pembayaran dilakukan dengan QRIS, transfer bank, atau e-wallet lokal melalui dibayar.in.",
+      "url": "https://dibayar.in/",
+      "offers": {
+        "@type": "Offer",
+        "availability": "https://schema.org/InStock",
+        "priceCurrency": "IDR"
+      }
+    }
+    </script>
+
     <style>
         * {
             margin: 0;
@@ -520,6 +546,85 @@
                         <img src="qris.jpg" alt="QRIS Payment">
                     </div>
                     <p class="qris-note">Scan QR code di atas untuk melakukan pembayaran</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Links Section -->
+    <section class="links" style="padding:40px 0;background:#fff;">
+        <div class="container" style="text-align:center;font-size:14px;color:#6c7a89;">
+            <p style="margin-bottom:8px;">Butuh panduan lebih detail?</p>
+            <p>
+                <a href="jasa-pembayaran-chatgpt-plus.html" style="color:#0070ba;">Jasa pembayaran ChatGPT Plus tanpa kartu kredit</a> ·
+                <a href="jasa-bayar-claude-dan-ai-tools.html" style="color:#0070ba;">Jasa bayar Claude Pro dan AI tools</a> ·
+                <a href="jasa-bayar-ai-pakai-qris.html" style="color:#0070ba;">Bayar AI tools pakai QRIS / transfer bank</a>
+            </p>
+        </div>
+    </section>
+
+    <!-- Layanan AI Section (SEO-friendly, tetap minimalis) -->
+    <section class="services">
+        <div class="container">
+            <h2 class="section-title">Jasa Bayar ChatGPT, Claude, dan AI Tools Tanpa Kartu Kredit</h2>
+            <p style="text-align:center;color:#6c7a89;max-width:760px;margin:0 auto 32px;">
+                dibayar.in membantu kamu bayar berbagai layanan dan subscription AI internasional tanpa kartu kredit:
+                ChatGPT Plus, Claude Pro, Cursor, Gemini, Midjourney, GitHub Copilot, dan AI tools lain.
+                Cukup kirim detail langganan, bayar pakai <strong>QRIS</strong>, transfer bank, atau e-wallet lokal.
+            </p>
+            <p style="text-align:center;color:#6c7a89;max-width:760px;margin:0 auto;">
+                Semua pembayaran internasional dan top up credit <strong>OpenAI API, Claude API, dan AI coding tools</strong>
+                bisa diselesaikan melalui jasa pembayaran platform AI Indonesia dari dibayar.in.
+            </p>
+        </div>
+    </section>
+
+    <!-- FAQ SEO Section (long-tail keyword, tetap ringkas) -->
+    <section class="faq" style="padding:60px 0;background:#fff;">
+        <div class="container">
+            <h2 class="section-title">FAQ Pembayaran AI Tanpa Kartu Kredit</h2>
+
+            <div style="max-width:800px;margin:0 auto;color:#2c3e50;font-size:15px;">
+                <div style="margin-bottom:24px;">
+                    <h3 style="font-size:16px;font-weight:600;margin-bottom:8px;">
+                        Bagaimana cara bayar ChatGPT tanpa kartu kredit di Indonesia?
+                    </h3>
+                    <p style="color:#6c7a89;">
+                        Kamu cukup hubungi admin dibayar.in, kirimkan email akun dan paket yang ingin diambil
+                        (misalnya ChatGPT Plus), lalu lakukan pembayaran via transfer bank, QRIS, atau e-wallet.
+                        Tim kami akan memproses <strong>langganan ChatGPT Plus tanpa kartu kredit</strong> untukmu.
+                    </p>
+                </div>
+
+                <div style="margin-bottom:24px;">
+                    <h3 style="font-size:16px;font-weight:600;margin-bottom:8px;">
+                        Apakah bisa langganan Claude Pro dan AI tools lain pakai transfer bank?
+                    </h3>
+                    <p style="color:#6c7a89;">
+                        Bisa. dibayar.in menyediakan <strong>jasa bayar Claude Pro, Cursor, GitHub Copilot, dan AI coding tools</strong>
+                        cukup dengan transfer bank BCA/mandiri, QRIS, atau e-wallet. Kamu tidak perlu kartu kredit maupun VCC.
+                    </p>
+                </div>
+
+                <div style="margin-bottom:24px;">
+                    <h3 style="font-size:16px;font-weight:600;margin-bottom:8px;">
+                        Bisakah bayar subscription AI pakai QRIS atau e-wallet?
+                    </h3>
+                    <p style="color:#6c7a89;">
+                        Bisa. Banyak pengguna memilih <strong>jasa bayar AI tools pakai QRIS</strong> atau e-wallet seperti Dana, OVO, dan GoPay.
+                        Setelah pembayaran diterima, kami akan langsung memproses pesanan di platform AI tujuan.
+                    </p>
+                </div>
+
+                <div>
+                    <h3 style="font-size:16px;font-weight:600;margin-bottom:8px;">
+                        Solusi terbaik untuk semua pembayaran internasional tanpa kartu kredit apa?
+                    </h3>
+                    <p style="color:#6c7a89;">
+                        Untuk pembayaran internasional, langganan software, maupun <strong>subscription AI tools tanpa kartu kredit</strong>,
+                        solusi paling praktis adalah menggunakan jasa pembayaran dari <strong>dibayar.in</strong>. 
+                        Kamu cukup bayar dalam Rupiah dan kami yang mengurus seluruh proses internasionalnya.
+                    </p>
                 </div>
             </div>
         </div>
