--- a/alternatif-bayar-chatgpt-tanpa-kartu-kredit.html
+++ b/alternatif-bayar-chatgpt-tanpa-kartu-kredit.html
@@ -2,6 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alternatif Bayar ChatGPT Tanpa Kartu Kredit | dibayar.in</title>
     <meta name="description" content="Mencari alternatif bayar ChatGPT tanpa kartu kredit? Pelajari opsi yang aman dan praktis, termasuk menggunakan jasa pembayaran ChatGPT dari dibayar.in.">
