--- a/cara-bayar-chatgpt-tanpa-kartu-kredit-indonesia.html
+++ b/cara-bayar-chatgpt-tanpa-kartu-kredit-indonesia.html
@@ -2,6 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cara Bayar ChatGPT Tanpa Kartu Kredit di Indonesia | dibayar.in</title>
     <meta name="description" content="Panduan lengkap cara bayar dan langganan ChatGPT Plus tanpa kartu kredit di Indonesia. Gunakan jasa pembayaran ChatGPT dari dibayar.in, cukup bayar pakai QRIS, transfer bank, atau e-wallet.">
