--- a/cara-bayar-github-copilot-tanpa-kartu-kredit.html
+++ b/cara-bayar-github-copilot-tanpa-kartu-kredit.html
@@ -2,6 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cara Bayar GitHub Copilot Tanpa Kartu Kredit | dibayar.in</title>
     <meta name="description" content="Panduan cara bayar GitHub Copilot tanpa kartu kredit untuk developer di Indonesia. Gunakan jasa pembayaran GitHub Copilot dari dibayar.in.">
