--- a/jasa-pembayaran-chatgpt-plus.html
+++ b/jasa-pembayaran-chatgpt-plus.html
@@ -2,6 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jasa Pembayaran ChatGPT Plus Tanpa Kartu Kredit Indonesia | dibayar.in</title>
     <meta name="description" content="Butuh langganan ChatGPT Plus tapi tidak punya kartu kredit? Gunakan jasa pembayaran ChatGPT dari dibayar.in. Bayar pakai QRIS, transfer bank, atau e-wallet lokal.">
