--- a/cara-bayar-droid-ai-tools-tanpa-kartu-kredit.html
+++ b/cara-bayar-droid-ai-tools-tanpa-kartu-kredit.html
@@ -2,6 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cara Bayar Droid / AI Tools Lain Tanpa Kartu Kredit | dibayar.in</title>
     <meta name="description" content="Panduan cara bayar Droid atau AI tools lain tanpa kartu kredit. Gunakan jasa pembayaran dari dibayar.in untuk menyelesaikan pembayaran internasional pakai metode lokal.">
