--- a/cara-bayar-kiro-tanpa-kartu-kredit.html
+++ b/cara-bayar-kiro-tanpa-kartu-kredit.html
@@ -2,6 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cara Bayar Kiro Tanpa Kartu Kredit | dibayar.in</title>
     <meta name="description" content="Cara mudah bayar Kiro tanpa kartu kredit. Pakai jasa pembayaran Kiro dari dibayar.in dan selesaikan pembayaran dengan QRIS, transfer bank, atau e-wallet lokal.">
