--- a/cara-bayar-minimax-tanpa-kartu-kredit.html
+++ b/cara-bayar-minimax-tanpa-kartu-kredit.html
@@ -2,6 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cara Bayar Minimax Tanpa Kartu Kredit | dibayar.in</title>
     <meta name="description" content="Panduan cara bayar Minimax tanpa kartu kredit. Gunakan jasa pembayaran Minimax dari dibayar.in dan bayar pakai QRIS, transfer bank, atau e-wallet.">
