--- a/cara-bayar-qoder-tanpa-kartu-kredit.html
+++ b/cara-bayar-qoder-tanpa-kartu-kredit.html
@@ -2,6 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cara Bayar Qoder Tanpa Kartu Kredit | dibayar.in</title>
     <meta name="description" content="Panduan cara bayar langganan Qoder tanpa kartu kredit. Gunakan jasa pembayaran Qoder dari dibayar.in dengan QRIS, transfer bank, atau e-wallet Indonesia.">
