--- a/cara-bayar-zai-tanpa-kartu-kredit.html
+++ b/cara-bayar-zai-tanpa-kartu-kredit.html
@@ -2,6 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cara Bayar ZAI Tanpa Kartu Kredit | dibayar.in</title>
     <meta name="description" content="Cara bayar ZAI tanpa kartu kredit untuk pengguna di Indonesia. Gunakan jasa pembayaran ZAI dari dibayar.in dengan transfer bank, QRIS, atau e-wallet.">
