--- a/cara-mengatasi-kartu-debit-ditolak-chatgpt.html
+++ b/cara-mengatasi-kartu-debit-ditolak-chatgpt.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cara Mengatasi Kartu Debit Ditolak ChatGPT - Solusi Payment Declined | dibayar.in</title>
     <meta name="description"
