--- a/cara-top-up-openai-api-tanpa-kartu-kredit.html
+++ b/cara-top-up-openai-api-tanpa-kartu-kredit.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cara Top Up OpenAI API Tanpa Kartu Kredit Indonesia | dibayar.in</title>
     <meta name="description"
