--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dibayar.in - Jasa Pembayaran ChatGPT, Claude, dan AI Tools Tanpa Kartu Kredit (Indonesia)</title>
 
