--- a/jasa-bayar-ai-pakai-qris.html
+++ b/jasa-bayar-ai-pakai-qris.html
@@ -2,6 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jasa Bayar AI Tools Pakai QRIS dan Transfer Bank | dibayar.in</title>
     <meta name="description" content="Bayar ChatGPT, Claude, Cursor, dan AI tools lain pakai QRIS, e-wallet, atau transfer bank Indonesia. Semua pembayaran internasional tanpa kartu kredit ditangani oleh dibayar.in.">
