--- a/langganan-ai-pakai-ewallet.html
+++ b/langganan-ai-pakai-ewallet.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Langganan AI Pakai E-Wallet Dana OVO GoPay | dibayar.in</title>
     <meta name="description"
