--- a/index.html
+++ b/index.html
@@ -702,6 +702,101 @@
         </div>
     </section>
 
+    <!-- Jasa Bayar Subscription Internasional Section -->
+    <section class="subscription-articles" style="padding:60px 0;background:#fff;">
+        <div class="container">
+            <h2 class="section-title">Jasa Bayar Subscription Internasional Tanpa Kartu Kredit</h2>
+            <p style="text-align:center;color:#6c7a89;max-width:700px;margin:0 auto 32px;">Selain AI tools, kami juga melayani pembayaran berbagai platform internasional lainnya:</p>
+
+            <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;">
+                <!-- Software Desain -->
+                <a href="jasa-bayar-canva-figma-adobe-tanpa-kartu-kredit.html" style="text-decoration:none;">
+                    <div style="background:#f8fafc;padding:20px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);transition:transform 0.3s;">
+                        <h3 style="font-size:16px;color:#2c3e50;margin-bottom:8px;">Jasa Bayar Canva, Figma, Adobe</h3>
+                        <p style="font-size:14px;color:#6c7a89;margin:0;">Software desain profesional tanpa kartu kredit</p>
+                    </div>
+                </a>
+                <!-- Streaming -->
+                <a href="jasa-bayar-netflix-spotify-youtube-premium.html" style="text-decoration:none;">
+                    <div style="background:#f8fafc;padding:20px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);transition:transform 0.3s;">
+                        <h3 style="font-size:16px;color:#2c3e50;margin-bottom:8px;">Jasa Bayar Netflix, Spotify, YouTube</h3>
+                        <p style="font-size:14px;color:#6c7a89;margin:0;">Platform streaming favorit tanpa kartu kredit</p>
+                    </div>
+                </a>
+                <!-- Gaming -->
+                <a href="jasa-bayar-steam-playstation-xbox-tanpa-kartu-kredit.html" style="text-decoration:none;">
+                    <div style="background:#f8fafc;padding:20px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);transition:transform 0.3s;">
+                        <h3 style="font-size:16px;color:#2c3e50;margin-bottom:8px;">Jasa Bayar Steam, PlayStation, Xbox</h3>
+                        <p style="font-size:14px;color:#6c7a89;margin:0;">Platform gaming tanpa kartu kredit</p>
+                    </div>
+                </a>
+                <!-- Produktivitas -->
+                <a href="jasa-bayar-notion-grammarly-microsoft-365.html" style="text-decoration:none;">
+                    <div style="background:#f8fafc;padding:20px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);transition:transform 0.3s;">
+                        <h3 style="font-size:16px;color:#2c3e50;margin-bottom:8px;">Jasa Bayar Notion, Grammarly, Microsoft 365</h3>
+                        <p style="font-size:14px;color:#6c7a89;margin:0;">Tools produktivitas tanpa kartu kredit</p>
+                    </div>
+                </a>
+                <!-- Cloud Storage -->
+                <a href="jasa-bayar-google-one-icloud-dropbox.html" style="text-decoration:none;">
+                    <div style="background:#f8fafc;padding:20px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);transition:transform 0.3s;">
+                        <h3 style="font-size:16px;color:#2c3e50;margin-bottom:8px;">Jasa Bayar Google One, iCloud, Dropbox</h3>
+                        <p style="font-size:14px;color:#6c7a89;margin:0;">Cloud storage tanpa kartu kredit</p>
+                    </div>
+                </a>
+                <!-- E-Learning -->
+                <a href="jasa-bayar-udemy-coursera-skillshare.html" style="text-decoration:none;">
+                    <div style="background:#f8fafc;padding:20px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);transition:transform 0.3s;">
+                        <h3 style="font-size:16px;color:#2c3e50;margin-bottom:8px;">Jasa Bayar Udemy, Coursera, Skillshare</h3>
+                        <p style="font-size:14px;color:#6c7a89;margin:0;">Platform e-learning tanpa kartu kredit</p>
+                    </div>
+                </a>
+                <!-- VPN -->
+                <a href="jasa-bayar-vpn-nordvpn-expressvpn.html" style="text-decoration:none;">
+                    <div style="background:#f8fafc;padding:20px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);transition:transform 0.3s;">
+                        <h3 style="font-size:16px;color:#2c3e50;margin-bottom:8px;">Jasa Bayar NordVPN, ExpressVPN</h3>
+                        <p style="font-size:14px;color:#6c7a89;margin:0;">VPN premium tanpa kartu kredit</p>
+                    </div>
+                </a>
+                <!-- Developer Tools -->
+                <a href="jasa-bayar-jetbrains-vercel-heroku.html" style="text-decoration:none;">
+                    <div style="background:#f8fafc;padding:20px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);transition:transform 0.3s;">
+                        <h3 style="font-size:16px;color:#2c3e50;margin-bottom:8px;">Jasa Bayar JetBrains, Vercel, Heroku</h3>
+                        <p style="font-size:14px;color:#6c7a89;margin:0;">Developer tools tanpa kartu kredit</p>
+                    </div>
+                </a>
+                <!-- Marketing Tools -->
+                <a href="jasa-bayar-semrush-ahrefs-mailchimp.html" style="text-decoration:none;">
+                    <div style="background:#f8fafc;padding:20px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);transition:transform 0.3s;">
+                        <h3 style="font-size:16px;color:#2c3e50;margin-bottom:8px;">Jasa Bayar SEMrush, Ahrefs, Mailchimp</h3>
+                        <p style="font-size:14px;color:#6c7a89;margin:0;">Marketing tools tanpa kartu kredit</p>
+                    </div>
+                </a>
+                <!-- Subscription Lengkap -->
+                <a href="jasa-bayar-subscription-internasional-lengkap.html" style="text-decoration:none;">
+                    <div style="background:#f8fafc;padding:20px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);transition:transform 0.3s;">
+                        <h3 style="font-size:16px;color:#2c3e50;margin-bottom:8px;">Jasa Bayar Subscription Internasional</h3>
+                        <p style="font-size:14px;color:#6c7a89;margin:0;">Panduan lengkap semua platform</p>
+                    </div>
+                </a>
+                <!-- Perbandingan -->
+                <a href="perbandingan-jasa-bayar-vs-vcc-kartu-kredit.html" style="text-decoration:none;">
+                    <div style="background:#f8fafc;padding:20px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);transition:transform 0.3s;">
+                        <h3 style="font-size:16px;color:#2c3e50;margin-bottom:8px;">Perbandingan Jasa Bayar vs VCC</h3>
+                        <p style="font-size:14px;color:#6c7a89;margin:0;">Mana yang lebih hemat dan praktis?</p>
+                    </div>
+                </a>
+                <!-- UMKM -->
+                <a href="jasa-bayar-tools-bisnis-umkm-tanpa-kartu-kredit.html" style="text-decoration:none;">
+                    <div style="background:#f8fafc;padding:20px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);transition:transform 0.3s;">
+                        <h3 style="font-size:16px;color:#2c3e50;margin-bottom:8px;">Jasa Bayar Tools Bisnis UMKM</h3>
+                        <p style="font-size:14px;color:#6c7a89;margin:0;">QuickBooks, Xero, Zoho tanpa kartu kredit</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </section>
+
     <!-- Layanan AI Section (SEO-friendly, tetap minimalis) -->
     <section class="services">
         <div class="container">
