--- a/index.html
+++ b/index.html
@@ -797,6 +797,80 @@
         </div>
     </section>
 
+    <!-- Problem-Solution & How-To Articles Section -->
+    <section class="problem-solution-articles" style="padding:60px 0;background:#f5f7fa;">
+        <div class="container">
+            <h2 class="section-title">Solusi Masalah Pembayaran Internasional</h2>
+            <p style="text-align:center;color:#6c7a89;max-width:700px;margin:0 auto 32px;">Mengalami kendala pembayaran? Baca panduan lengkap untuk mengatasi masalah umum:</p>
+
+            <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;">
+                <!-- Kartu Debit Ditolak -->
+                <a href="kartu-debit-ditolak-pembayaran-internasional-solusi.html" style="text-decoration:none;">
+                    <div style="background:#fff;padding:20px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);transition:transform 0.3s;border-left:4px solid #dc3545;">
+                        <h3 style="font-size:16px;color:#2c3e50;margin-bottom:8px;">Kartu Debit Ditolak? Ini Solusinya</h3>
+                        <p style="font-size:14px;color:#6c7a89;margin:0;">Penyebab dan cara mengatasi kartu ditolak</p>
+                    </div>
+                </a>
+                <!-- Tidak Punya Kartu Kredit -->
+                <a href="tidak-punya-kartu-kredit-cara-bayar-layanan-luar-negeri.html" style="text-decoration:none;">
+                    <div style="background:#fff;padding:20px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);transition:transform 0.3s;border-left:4px solid #28a745;">
+                        <h3 style="font-size:16px;color:#2c3e50;margin-bottom:8px;">Tidak Punya Kartu Kredit?</h3>
+                        <p style="font-size:14px;color:#6c7a89;margin:0;">Panduan lengkap bayar layanan luar negeri</p>
+                    </div>
+                </a>
+                <!-- Pembayaran Gagal -->
+                <a href="kenapa-pembayaran-internasional-gagal-dan-solusinya.html" style="text-decoration:none;">
+                    <div style="background:#fff;padding:20px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);transition:transform 0.3s;border-left:4px solid #ffc107;">
+                        <h3 style="font-size:16px;color:#2c3e50;margin-bottom:8px;">Pembayaran Gagal Terus?</h3>
+                        <p style="font-size:14px;color:#6c7a89;margin:0;">10 penyebab dan solusi lengkapnya</p>
+                    </div>
+                </a>
+                <!-- Solusi Freelancer -->
+                <a href="solusi-pembayaran-dollar-untuk-freelancer-indonesia.html" style="text-decoration:none;">
+                    <div style="background:#fff;padding:20px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);transition:transform 0.3s;border-left:4px solid #0070ba;">
+                        <h3 style="font-size:16px;color:#2c3e50;margin-bottom:8px;">Solusi untuk Freelancer</h3>
+                        <p style="font-size:14px;color:#6c7a89;margin:0;">Bayar tools profesional tanpa kartu kredit</p>
+                    </div>
+                </a>
+                <!-- Alternatif Kartu Kredit -->
+                <a href="alternatif-kartu-kredit-untuk-subscription-online.html" style="text-decoration:none;">
+                    <div style="background:#fff;padding:20px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);transition:transform 0.3s;border-left:4px solid #6f42c1;">
+                        <h3 style="font-size:16px;color:#2c3e50;margin-bottom:8px;">7 Alternatif Kartu Kredit</h3>
+                        <p style="font-size:14px;color:#6c7a89;margin:0;">Perbandingan lengkap metode pembayaran</p>
+                    </div>
+                </a>
+                <!-- Bayar Pakai Bank Lokal -->
+                <a href="bayar-layanan-luar-negeri-pakai-bank-lokal.html" style="text-decoration:none;">
+                    <div style="background:#fff;padding:20px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);transition:transform 0.3s;border-left:4px solid #17a2b8;">
+                        <h3 style="font-size:16px;color:#2c3e50;margin-bottom:8px;">Bayar Pakai Bank Lokal</h3>
+                        <p style="font-size:14px;color:#6c7a89;margin:0;">BCA, Mandiri, BNI, BRI untuk internasional</p>
+                    </div>
+                </a>
+                <!-- Tanpa Rekening Dollar -->
+                <a href="pembayaran-internasional-tanpa-rekening-dollar.html" style="text-decoration:none;">
+                    <div style="background:#fff;padding:20px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);transition:transform 0.3s;border-left:4px solid #fd7e14;">
+                        <h3 style="font-size:16px;color:#2c3e50;margin-bottom:8px;">Tanpa Rekening Dollar</h3>
+                        <p style="font-size:14px;color:#6c7a89;margin:0;">Bayar internasional langsung dalam Rupiah</p>
+                    </div>
+                </a>
+                <!-- Panduan Pemula -->
+                <a href="panduan-lengkap-pembayaran-internasional-pemula.html" style="text-decoration:none;">
+                    <div style="background:#fff;padding:20px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);transition:transform 0.3s;border-left:4px solid #20c997;">
+                        <h3 style="font-size:16px;color:#2c3e50;margin-bottom:8px;">Panduan untuk Pemula</h3>
+                        <p style="font-size:14px;color:#6c7a89;margin:0;">Belajar pembayaran internasional dari nol</p>
+                    </div>
+                </a>
+                <!-- Cara Verifikasi -->
+                <a href="cara-verifikasi-pembayaran-platform-internasional.html" style="text-decoration:none;">
+                    <div style="background:#fff;padding:20px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,0.05);transition:transform 0.3s;border-left:4px solid #e83e8c;">
+                        <h3 style="font-size:16px;color:#2c3e50;margin-bottom:8px;">Cara Verifikasi Pembayaran</h3>
+                        <p style="font-size:14px;color:#6c7a89;margin:0;">Tips lolos verifikasi di platform internasional</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </section>
+
     <!-- Layanan AI Section (SEO-friendly, tetap minimalis) -->
     <section class="services">
         <div class="container">
