--- a/apa-itu-clawdbot-dan-fungsinya.html
+++ b/apa-itu-clawdbot-dan-fungsinya.html
@@ -5,27 +5,27 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/svg+xml" href="icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apa Itu ClawdBot dan Fungsinya? AI Assistant Viral 2025 | dibayar.in</title>
+    <title>Apa itu Clawdbot? Penjelasan Lengkap AI Personal Assistant terbaru 2026 | dibayar.in</title>
     <meta name="description"
-        content="ClawdBot adalah AI assistant open-source yang viral di 2025. Pelajari apa itu ClawdBot, fungsinya untuk automasi tugas, integrasi dengan ChatGPT/Claude, dan cara kerjanya.">
+        content="Apa itu Clawdbot? AI personal assistant terbaru 2026 yang viral di Silicon Valley. Pelajari fitur, cara kerja, dan kegunaan Clawdbot untuk automasi tugas harian Anda.">
     <meta name="keywords"
-        content="apa itu ClawdBot, fungsi ClawdBot, ClawdBot AI, ClawdBot Indonesia, AI assistant open source, automasi AI">
+        content="apa itu Clawdbot, Clawdbot 2026, AI personal assistant, Clawdbot viral, automasi AI, Clawdbot Indonesia, AI assistant terbaru">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://dibayar.in/apa-itu-clawdbot-dan-fungsinya.html">
     <meta name="author" content="dibayar.in">
 
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://dibayar.in/apa-itu-clawdbot-dan-fungsinya.html">
-    <meta property="og:title" content="Apa Itu ClawdBot dan Fungsinya? AI Assistant Viral 2025">
+    <meta property="og:title" content="Apa itu Clawdbot? Penjelasan Lengkap AI Personal Assistant terbaru 2026">
     <meta property="og:description"
-        content="ClawdBot adalah AI assistant open-source yang viral. Pelajari fungsi dan kegunaannya untuk automasi tugas harian.">
+        content="Clawdbot adalah AI personal assistant terbaru 2026 yang viral. Pelajari fitur lengkap dan cara kerjanya.">
     <meta property="og:locale" content="id_ID">
 
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "Article",
-        "headline": "Apa Itu ClawdBot dan Fungsinya? AI Assistant Viral 2025",
+        "headline": "Apa itu Clawdbot? Penjelasan Lengkap AI Personal Assistant terbaru 2026",
         "author": { "@type": "Organization", "name": "dibayar.in" },
         "publisher": { "@type": "Organization", "name": "dibayar.in" },
         "datePublished": "2025-01-27",
@@ -208,17 +208,19 @@
             Apa Itu ClawdBot
         </nav>
 
-        <h1>Apa Itu ClawdBot dan Fungsinya? AI Assistant Viral 2025</h1>
+        <h1>Apa itu Clawdbot? Penjelasan Lengkap AI Personal Assistant terbaru 2026</h1>
         <p>
-            <strong>ClawdBot</strong> adalah AI assistant open-source yang sedang viral di kalangan tech enthusiast
-            dan profesional. Dikembangkan oleh Peter Steinberger, ClawdBot adalah personal AI yang berjalan secara
-            <em>local-first</em> dan bisa melakukan automasi tugas jauh lebih canggih daripada chatbot biasa.
+            <strong>Clawdbot</strong> adalah AI personal assistant terbaru 2026 yang sedang viral di kalangan
+            tech enthusiast dan profesional, terutama di Silicon Valley. Dikembangkan oleh Peter Steinberger,
+            Clawdbot adalah <strong>open-source AI agent</strong> yang berjalan secara <em>local-first</em> dan
+            bisa melakukan automasi tugas jauh lebih canggih daripada chatbot tradisional seperti ChatGPT atau Claude.
         </p>
 
         <div class="highlight-box">
-            <strong>💡 Apa yang membuat ClawdBot spesial?</strong> ClawdBot bukan sekadar chatbot seperti ChatGPT.
-            Ia adalah <strong>AI agent</strong> yang bisa mengakses file sistem, mengontrol browser, mengelola email,
-            kalender, dan melakukan banyak tugas secara otonom.
+            <strong>🚀 Trending 2026:</strong> Clawdbot menjadi phenomenon di awal 2026 karena menunjukkan
+            masa depan <strong>AI agent</strong> yang benar-benar bisa bekerja otonom, bukan sekadar chat.
+            Tech community menyebutnya sebagai "Jarvis untuk masa depan" - AI assistant yang bisa melakukan
+            tugas nyata, bukan hanya menjawab pertanyaan.
         </div>
 
         <h2>Fungsi Utama ClawdBot</h2>
