fix: change 'Kurs Setelah Markup (+Rp 1.000)' to 'Kurs Penyesuaian Visa'

--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
                         <span id="heroKursDasar">—</span>
                     </div>
                     <div class="calc-row">
-                        <span>Kurs Setelah Markup (+Rp 1.000)</span>
+                        <span>Kurs Penyesuaian Visa</span>
                         <span id="heroKursMarkup">—</span>
                     </div>
                     <div class="calc-row">
